# test

./: .metadata  README.md  ffigen.yaml  flake.nix  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
example/: pubspec.yaml
example/lib/: main.dart
lib/: test.dart  test_bindings_generated.dart
src/: CMakeLists.txt  test.cpp  test.h  testhpp.h
